--- a/public/assets/sebian/css/style.css
+++ b/public/assets/sebian/css/style.css
@@ -8,21 +8,21 @@
 -------------------------------------------------------------------*/
 
 /*------------------------------------------------------------------
-body 
+body
  + WRAP
  + HEADER
  + NAVIGATION
  + BANNER
  + SERVICES
  + OUR FEATURED FOUNDERS
- + BLOG UPDATES 
+ + BLOG UPDATES
  + APPOINMENT
  + NEWS FROM BLOG
  + PARTNERS / CLIENTS
  + FOOTER
  + SOCIAL ICONS
  + MEGA MENU
- + 3 MENU LEVEL 
+ + 3 MENU LEVEL
 -------------------------------------------------------------------*/
 /*=======================================================
       THEME STYLING START
@@ -637,7 +637,7 @@ header .sticky{
 }
 header .is-sticky .sticky{
 	padding-top:15px;
-	background:rgba(0,0,0,0.7); 
+	background:rgba(0,0,0,0.7);
 	box-shadow:0 2px 2px rgba(0,0,0,0.1);
 }
 /*=======================================================
@@ -925,7 +925,7 @@ header .ownmenu .look-book .media-body a {
 }
 /*=======================================================
       HOME 6 Style
-========================================================*/ 
+========================================================*/
 .home-6-style {
 	font-family: 'Montserrat', sans-serif;
 }
@@ -1361,7 +1361,7 @@ header .ownmenu .look-book .media-body a {
 	width: 100% !important;
 }
 /*===========================================
-    Rating Stars 
+    Rating Stars
 ===========================================*/
 .stars {
 	display: inline-block;
@@ -1529,7 +1529,7 @@ header .ownmenu .look-book .media-body a {
 	left: -60px;
 }
 /*===========================================
-    Seasonals   
+    Seasonals
 ===========================================*/
 .seasonals {
 }
@@ -2086,7 +2086,7 @@ header .ownmenu .look-book .media-body a {
 	width: 25%;
 }
 /*===========================================
-	Portfolio Single 
+	Portfolio Single
 ===========================================*/
 .portfolio-single p {
 	font-family: 'Montserrat', sans-serif;
@@ -2832,7 +2832,7 @@ header .ownmenu .look-book .media-body a {
       Subcribe
 ========================================================*/
 .subcribe {
-	background: url(../images/bg/bg-3.jpg) fixed no-repeat;
+	/*background: url(../images/bg/bg-3.jpg) fixed no-repeat;*/
 	background-size: cover;
 }
 .subcribe .overlay {
@@ -2841,7 +2841,7 @@ header .ownmenu .look-book .media-body a {
 .subcribe h4 {
 	font-size: 20px;
 	text-transform: uppercase;
-	color: #fff;
+	color: #000;
 	margin: 0px;
 	float: left;
 	letter-spacing: 5px;
@@ -2849,11 +2849,11 @@ header .ownmenu .look-book .media-body a {
 }
 .subcribe .sub-mail input {
 	width: 100%;
-	border: 1px solid #fff;
+	border: 1px solid #000;
 	padding: 0px 20px;
 	line-height: 60px;
 	background: none;
-	color: #fff;
+	color: #000;
 	font-family: 'Montserrat', sans-serif;
 	letter-spacing: 3px;
 	font-size: 12px;
@@ -2862,12 +2862,11 @@ header .ownmenu .look-book .media-body a {
 .subcribe .sub-mail button {
 	border: none;
 	background: none;
-	color: #fff;
-	color: #fff;
+	color: #000;
 	font-family: 'Montserrat', sans-serif;
 	letter-spacing: 3px;
 	font-size: 12px;
-	border-left: 1px solid #fff;
+	border-left: 1px solid #000;
 	float: right;
 	padding: 0 30px;
 	position: relative;
